--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,7 +90,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #33a16a;
+  color: #484092;
 }
 
 .list .modal form {
@@ -115,18 +115,21 @@ body {
   width: 50%;
   padding-left: 10px;
   outline: none;
-  border: 1px solid #33a16a;
+  border: 1px solid #484092;
+  font-size: 16px;
 }
 
 .list .modal form button {
   width: 4vh;
-  height: 100%;
+  height: 4vh;
+  min-height: 4vh;
+  min-width: 4vh;
   margin-left: 1vh;
-  border-radius: 50%;
+  border-radius: 8px;
   border: none;
   outline: none;
   cursor: pointer;
-  background: #33a16a;
+  background: #484092;
   color: white;
   font-size: 2rem;
 }
