--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,4 @@
-$main: rgb(72, 64, 146);
+$main: #484092;
 
 :root {
   font-size: 10px;
@@ -76,13 +76,16 @@ body {
         padding-left: 10px;
         outline: none;
         border: 1px solid $main;
+        font-size: 16px;
       }
 
       button {
         width: 4vh;
-        height: 100%;
+        height: 4vh;
+        min-height: 4vh;
+        min-width: 4vh;
         margin-left: 1vh;
-        border-radius: 50%;
+        border-radius: 8px;
         border: none;
         outline: none;
         cursor: pointer;
